--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "autoprefixer": "10.4.5",
-        "vue-router": "^3.5.3"
+        "vue-router": "^3.5.3",
+        "vuex": "^4.0.2"
     }
 }
